Database connection and HotelRoom model added

--- a/HiddenVilla/appsettings.json
+++ b/HiddenVilla/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=Yudiz-Amisha\\SQL2019;Database=HiddenVilla;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
